# Heart-Rhythm-Dynamics-Simulation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Engine/: CMakeLists.txt
Engine/libraries/assimp/: CMakeLists.txt
Engine/libraries/assimp/include/assimp/: SmoothingGroups.h
Engine/src/: JellyEngine.cpp  JellyEngine.h  RK4.cpp  RK4.h  ThreeCoupledOscillator.cpp  ThreeCoupledOscillator.h  camera.cpp  camera.h  gameObject.cpp  gameObject.h  input.cpp  input.h  mesh.cpp  mesh.h  model.cpp  model.h  physics.cpp  physics.h  renderer.cpp  renderer.h  shader.cpp  shader.h
Game/: readmsh.py
Game/resources/3D/fun/: Heart.msh  NewHeartColor.mtl  Suzane.msh  heart15.mtl  newHeart-test04.msh
Game/resources/shaders/: shader.frag  shader2.frag  shader2.vert
Game/src/: game.cpp  game.h
